Fill in the POM developers and document how a consumer depends on a bundle